# ubody_porject

./: .gitignore  Pipfile  pyproject.toml
Qt_partice/: message-i.py
Qt_pratice/: file_os  message-i.py  path_load  test.py  test1.py  test2.py  window.py
admin/admin/: settings.py
blog/: db.sqlite3
blog/obclass/: __init__.py
blog/object/: settings.py
ddt_cas/: Myclass_main.py  Myclass_test.py  ddt_test.py  test_Myclass.py  test_Myclass2.py
ddt_cas/report/: 2020-02-19测试.html  2020-02-20测试.html
pyQt5/: message-i.py  pyQt5.py
py_Mysql/: connection.py
selenium_porject/: Tlog.py  apps.py  models.py  practice.py  views.py
server_linux/: ftp_for.py
xlrd/: practice.py  xlrd.xlsx
