[tool.poetry]
name = "ymh_porject"
version = "0.1.0"
description = "QT+mysql+paramiko"
authors = ["yangmh"]

readme = "README.md"

homepage = "https://poetry.eustace.io/"
repository = "https://pypi.tuna.tsinghua.edu.cn/simple/"
documentation = "https://poetry.eustace.io/docs"

keywords = ["packaging", "dependency", "poetry"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
httprunner = "^3.0.1"
paramiko = "^2.7.1"
pyqt5 = "^5.14.2"
beautifulreport = "^0.1.2"
ddt = "^1.3.1"
unittest2 = "^1.1.0"
pyyaml = "^5.3.1"
appium-python-client = "^0.51"
selenium = "^3.141.0"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
